# corner-cases

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  corner-cases.workspace  cubelib-formatters.project  cubelib-unittest.project  cubexx-formatters.project  cubexx-unittest.project  index.html  params.json
develop/sphinx-docs/html/: .buildinfo  cubelib-edge.html  cubelib-reference.html  cubexx-corner.html  cubexx-direction.html  cubexx-edge.html  cubexx-face.html  cubexx-reference.html  cubexx-sets.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
develop/sphinx-docs/html/.doctrees/: cubelib-corner.doctree  cubelib-direction.doctree  cubelib-edge.doctree  cubelib-face.doctree  cubelib-reference.doctree  cubexx-corner.doctree  cubexx-direction.doctree  cubexx-edge.doctree  cubexx-face.doctree  cubexx-reference.doctree  cubexx-sets.doctree  environment.pickle  index.doctree
develop/sphinx-docs/html/_sources/: cubelib-corner.txt  cubelib-edge.txt  cubexx-corner.txt  cubexx-direction.txt  cubexx-reference.txt
docs/: CMakeLists.txt  Doxyfile.in
docs/source/: conf.py  cubelib-corner.rst  cubelib-direction.rst  cubelib-face.rst  cubelib-reference.rst  cubexx-corner.rst  cubexx-direction.rst  cubexx-edge.rst  cubexx-reference.rst  cubexx-sets.rst  index.rst
docs/source/_static/: mydoc.css
include/: cubelib.h
include/cubelib/: cubelib.fwd.h  cubelib.h  formatters.hpp
include/cubelib/detail/: cubelib.inl.h  formatters.inl.hpp
include/cubexx/: cubexx.fwd.hpp  cubexx.hpp  cubexx.inl.hpp  formatters.hpp
include/cubexx/detail/: cubexx.inl.hpp  formatters.inl.hpp
master/sphinx-docs/html/: .buildinfo  cubelib-corner.html  cubelib-direction.html  cubelib-face.html  cubexx-corner.html  cubexx-face.html  cubexx-reference.html  cubexx-sets.html  searchindex.js
master/sphinx-docs/html/.doctrees/: cubelib-corner.doctree  cubelib-direction.doctree  cubelib-edge.doctree  cubelib-face.doctree  cubelib-reference.doctree  cubexx-corner.doctree  cubexx-direction.doctree  cubexx-edge.doctree  cubexx-face.doctree  cubexx-reference.doctree  cubexx-sets.doctree  environment.pickle  index.doctree
master/sphinx-docs/html/_sources/: cubelib-reference.txt  cubexx-face.txt  cubexx-reference.txt
scripts/: copy-msys-dlls-to-Debug64.sh  download-and-build-googletest.sh  install-deps-via-apt.sh  publish-sphinx-docs.sh  rebuild.it.all.for.msys.sh
src/: cubelib-gen-consts.cpp
src/cubelib/: cubelib-gen-consts.cpp  formatters.cpp
src/cubexx/: formatters.cpp
src/examples/: cubelib-docs-example.cpp  cubexx-docs-example.cpp
src/unittests/: cubelib-corner.cpp  cubelib-direction.cpp  cubelib-edge.cpp  cubelib-face.cpp  cubelib.cpp  cubexx-corner.cpp  cubexx-direction.cpp  cubexx-edge.cpp  cubexx-face.cpp  cubexx.cpp  main.cpp
